--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello Word</h1>
-<p>I'm hosted with Github Pages.</p>
+<head>
+  <title>Emilia Hernandez</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+</body>
+  <div class="container">
+  </div>
 </body>
 </html>
