--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>Emilia Hernandez</title>
   <link rel="stylesheet" href="style.css">
+
 </head>
-</body>
+<body>
   <div class="container">
+    <div class="menu">
+      <ul>
+        <li>Home</li>
+        <li>Services</li>
+        <li>Product</li>
+        <li>Contact</li>
+      </ul>
+    </div>
   </div>
+
+
+
 </body>
 </html>
