--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <div class="container">
     <div class="menu">
       <ul>
+        <li class="logo"><img src="butterfliesorg.png"></li>
         <li>Home</li>
         <li>Services</li>
         <li>Product</li>
         <li>Contact</li>
       </ul>
+    </div>
+    <div class="banner">
+      <div class="app-text">
+        <h1>Emilia Hernandez: Student,<br> Illustrator, Programmer</h1>
+        <p>Generation Googler Scholar, Student at UCF,<br> @emiliabea</p>
+    </div>
+    <div class="app-picture">
+      <img src="bedroomside.jpg">
     </div>
   </div>
 
