updating the site

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
   <title>Emilia Hernandez</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="menu">
       <ul>
-        <li class="logo"><img src="butterfliesorg.png"></li>
+        <li class="logo"><img src="logo.png"></li>
         <li>Home</li>
         <li>Services</li>
         <li>Product</li>
@@ -20,7 +21,7 @@
         <p>Generation Googler Scholar, Student at UCF,<br> @emiliabea</p>
     </div>
     <div class="app-picture">
-      <img src="bedroomside.jpg">
+      <img src="logoreal.png">
     </div>
   </div>
 </body>
