--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Emilia Hernandez</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@500&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -17,12 +18,13 @@
     </div>
     <div class="banner">
       <div class="app-text">
-        <h1>Emilia Hernandez: Student,<br> Illustrator, Programmer</h1>
+        <h1 class = "animate__pulse">Emilia Hernandez: Student,<br> Illustrator, Programmer</h1>
         <p>Generation Googler Scholar, Student at UCF,<br> @emiliabea</p>
     </div>
     <div class="app-picture">
       <img src="logoreal.png">
     </div>
   </div>
+
 </body>
 </html>
