--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <head>
   <title>Emilia Hernandez</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@500&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -11,20 +9,22 @@
       <ul>
         <li class="logo"><img src="logo.png"></li>
         <li>Home</li>
-        <li>Services</li>
-        <li>Product</li>
+        <li>Portfolio</li>
+        <li>Resume</li>
         <li>Contact</li>
       </ul>
     </div>
     <div class="banner">
       <div class="app-text">
-        <h1 class = "animate__pulse">Emilia Hernandez: Student,<br> Illustrator, Programmer</h1>
-        <p>Generation Googler Scholar, Student at UCF,<br> @emiliabea</p>
-    </div>
-    <div class="app-picture">
-      <img src="logoreal.png">
-    </div>
+        <h1 class = "animate__pulse">Emilia Hernandez</h1>
+        <p>Student / Illustrator / Game Dev</p>
+      </div>
+      <div class="app-picture">
+        <img src="rabbit.png" width = "400px" height="auto">
+      </div>
+      <div class="app-picture2">
+        <img src="frog.png" width = "400px" height="auto">
+      </div>
   </div>
-
 </body>
 </html>
