--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
-<html>
-<head>
-  <title>Emilia Hernandez</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <div class="menu">
-      <ul>
-        <li class="logo"><img src="logo.png"></li>
-        <li>Home</li>
-        <li>Portfolio</li>
-        <li>Resume</li>
-        <li>Contact</li>
-      </ul>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <nav class="navbar navbar-light bg-light" style="padding:0 0 0;">
+      <div class="container-fluid" style="background-color: lightgreen;padding: none;">
+        <a class="navbar-brand" href="#" style="color: black;">Emilia Hernandez</a>
+                <a class="navbar-brand" href="#" style="color: black;">Resume</a>
+                <a class="navbar-brand" href="#" style="color: black;">Portfolio</a>
+      </div>
+    </nav>
+    <title>title here...</title>
+    <style>
+    .col-sm-2:hover img{ 
+      transform: scale(1.03); 
+    }</style>
+  </head>
+  <body style="background-color: #121212;">
+    <div class="row">
+    <div class ="col-sm-4" style="padding-left: 100px; padding-top: 100px;">
+      <h2 style="color: blanchedalmond;">Welcome!</h2>
+      <h4 style="color: blanchedalmond;">I study Digital Media at the University of Central Florida and work as a Web Designer for their Office of Student Involvement
+        In my free time, I love to participate in Game Jams and Hackathons because I love making punchy and impactful content in small packages</h4>
     </div>
-    <div class="banner">
-      <div class="app-text">
-        <h1 class = "animate__pulse">Emilia Hernandez</h1>
-        <p>Student / Illustrator / Game Dev</p>
-      </div>
-      <div class="app-picture">
-        <img src="rabbit.png" width = "400px" height="auto">
-      </div>
-      <div class="app-picture2">
-        <img src="frog.png" width = "400px" height="auto">
-      </div>
+    <div class="col-sm-2">
+      <img src="1.png">
+    </div>
+    <div class="col-sm-2">
+      <img src="2.png">
+    </div>
+    <div class="col-sm-2">
+      <img src="3.png">
+    </div>
+    <div class="col-sm-2">
+      <img src="4.png">
+    </div>
   </div>
-</body>
+  </div>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  </body>
 </html>
