--- a/index.html
+++ b/index.html
@@ -1,29 +1,54 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <style>
+      .col-sm-2:hover img{ 
+        transform: scale(1.03); 
+      }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="logo.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <nav class="navbar navbar-light bg-light" style="padding:0 0 0;">
-      <div class="container-fluid" style="background-color: lightgreen;padding: none;">
-        <a class="navbar-brand" href="#" style="color: black;">Emilia Hernandez</a>
-                <a class="navbar-brand" href="#" style="color: black;">Resume</a>
-                <a class="navbar-brand" href="#" style="color: black;">Portfolio</a>
+    <script src="https://kit.fontawesome.com/b2b820c8de.js" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:lightgreen">
+      <a class="navbar-brand" href="#"style="padding-left: 20px;">Emilia Hernandez</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </nav>
-    <title>title here...</title>
-    <style>
-    .col-sm-2:hover img{ 
-      transform: scale(1.03); 
-    }</style>
+    <title>Emilia Hernandez</title>
   </head>
   <body style="background-color: #121212;">
     <div class="row">
     <div class ="col-sm-4" style="padding-left: 100px; padding-top: 100px;">
-      <h2 style="color: blanchedalmond;">Welcome!</h2>
-      <h4 style="color: blanchedalmond;">I study Digital Media at the University of Central Florida and work as a Web Designer for their Office of Student Involvement
+      <h2 style="color: blanchedalmond;"><i class="fas fa-frog"></i> Welcome!</h2>
+      <h4 style="color: blanchedalmond;">I study Digital Media at the University of Central Florida and work as a Web Designer for their Office of Student Involvement.
         In my free time, I love to participate in Game Jams and Hackathons because I love making punchy and impactful content in small packages</h4>
     </div>
     <div class="col-sm-2">
