--- a/resume.html
+++ b/resume.html
@@ -63,10 +63,10 @@
           <h5 class="cart-title" style="color: whitesmoke;"><i class="fas fa-hand-spock"></i> Skills</h5>
           <h6 class="card-subtitle mb-2 text-muted">Technology Proficiency</h6>
           <span class="badge rounded-pill bg-primary">Adobe XD</span>
-          <span class="badge rounded-pill bg-success">Adobe Photoshop</span>
+          <span class="badge rounded-pill bg-success"><i class="fas fa-certificate"></i> Adobe Photoshop</span>
           <span class="badge rounded-pill bg-primary"><i class="fas fa-certificate"></i> Microsoft Word</span>
-          <span class="badge rounded-pill bg-success">Microsoft Powerpoint</span>
-          <span class="badge rounded-pill bg-primary">Microsoft Excel</span>
+          <span class="badge rounded-pill bg-success"><i class="fas fa-certificate"></i> Microsoft Powerpoint</span>
+          <span class="badge rounded-pill bg-primary"><i class="fas fa-certificate"></i> Microsoft Excel</span>
           <span class="badge rounded-pill bg-success">Figma</span>
           <span class="badge rounded-pill bg-primary"><i class="fas fa-certificate"></i> Unity</span>
           <span class="badge rounded-pill bg-success">Visual Studio Code</span>
@@ -74,7 +74,7 @@
           <span class="badge rounded-pill bg-success">Bootstrap</span>
 
           <h6 class="card-subtitle mb-2 text-muted " style="margin-top: 20px;">Programming</h6>
-          <span class="badge rounded-pill bg-primary">HTML/CSS</span>
+          <span class="badge rounded-pill bg-primary"><i class="fas fa-certificate"></i> HTML/CSS</span>
           <span class="badge rounded-pill bg-success">C#</span>
           <span class="badge rounded-pill bg-primary">PHP</span>
           <span class="badge rounded-pill bg-success">Javascript</span>
@@ -87,7 +87,7 @@
           <h5 class="cart-title" style="color: whitesmoke;margin-top: 20px;"><i class="fas fa-medal"></i> Achievements
           </h5>
           <li>Dean’s List (Spring 2020, Spring 2021)</li>
-          <li>Freecodecamp Responsive Web Design Certificate (2021)</li>
+          <li>FreeCodeCamp Responsive Web Design Certificate (2021)</li>
           <li>Taco Bell Live Mas Scholarship + Renewal Scholarship (2020, 2018)</li>
           <li>Generation Google Scholarship (2018)</li>
           <li>National Silver Medal in Game Design for the Scholastic Art and Writing Awards (2018)</li>
