--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b2b820c8de.js" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:lightgreen">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:rgb(130, 122, 155)">
       <a class="navbar-brand" href="#"style="padding-left: 20px;">Emilia Hernandez</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,20 +51,28 @@
       <h4 style="color: blanchedalmond;">I study Digital Media at the University of Central Florida and work as a Web Designer for their Office of Student Involvement.
         In my free time, I love to participate in Game Jams and Hackathons because I love making punchy and impactful content in small packages</h4>
     </div>
-    <div class="col-sm-2">
-      <img src="1.png">
-    </div>
-    <div class="col-sm-2">
-      <img src="2.png">
-    </div>
-    <div class="col-sm-2">
-      <img src="3.png">
-    </div>
-    <div class="col-sm-2">
-      <img src="4.png">
     </div>
   </div>
   </div>
+  <div class="container" style="background-color: black; margin-top: 50px;">
+<div class="row">
+<div class="col-sm-2" style="padding: 30px; margin: 10px;">
+  <img src="1.png">
+</div>
+<div class="col-sm-2" style="padding: 30px; margin: 10px;">
+  <img src="2.png">
+</div>
+<div class="col-sm-2" style="padding: 30px; margin: 10px;">
+  <img src="3.png">
+</div>
+<div class="col-sm-2" style="padding: 30px; margin: 10px;">
+  <img src="4.png">
+</div>
+<div class="col-sm-2" style="padding: 30px; margin: 10px;">
+  <h1>Creative Works</h1>
+  <p>Click to learn more about each of these games I've made</p>
+</div>
+</div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
